1999-03-11  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-edit.el (mime-charset-type-list): Add `tis-620'.


1999-02-28  Katsumi Yamaoka   <yamaoka@jpl.org>

	* WEMI: Version 1.13.3 (Yaizu) released.

1999-02-26  Katsumi Yamaoka   <yamaoka@jpl.org>

	* SEMI-MK (install-semi-package): Install mime-setup.el(c).
	(compile-semi-package): Compile mime-setup.el as well.

1999-02-08  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-edit.el (mime-content-types): Add definition of
	application/vnd.ms-powerpoint for myself :-P
	(mime-file-types): Add setting of *.ppt for
	application/vnd.ms-powerpoint.

1999-02-08  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-partial.el
	(mime-combine-message/partial-pieces-automatically): Call
	`mime-store-message/partial-piece' in the buffer when it is
	called.

	* mime-play.el (mime-store-message/partial-piece): Don't move to
	point-min.

	* mime-play.el (mime-store-message/partial-piece): Don't expect
	called in raw-buffer.


1999-01-27  Katsumi Yamaoka   <yamaoka@jpl.org>

	* WEMI: Version 1.13.2 (Mochimune) released.

1999-01-26  Katsumi Yamaoka   <yamaoka@jpl.org>

	* README.en: Notice that 1.12.5 or later of FLIM is required.

1999-01-26  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-play.el (mime-preview-play-current-entity): Add autoload
	cookie.
	(mime-play-entity): Likewise.

	* mime-view.el (mime-display-message): Add autoload cookie; add
	DOC-string.
	(mime-view-buffer): Add autoload cookie.

1999-01-26  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-play.el (mime-reduce-acting-situation-examples): New
	implementation.

1999-01-26  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-play.el (mime-view-caesar): Select window which displays
	current-buffer if it is not selected <to fix problem with mouse
	operations>.

1999-01-26  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-edit.el (mime-edit-decode-single-part-in-buffer): Limit the
	search bound for the end of "Content-Transfer-Encoding" field.
